--- a/Traditional.html
+++ b/Traditional.html
@@ -156,17 +156,12 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/Kaylins%20back.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/davinki.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/delon%20lounging.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/kaelyn%2015%20min.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/ken%20lounging.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/lulu%201%20and%205%20min.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/me%20port%20lol.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/nina%20staff.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/partil%20blind.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
 <p></p>
 	
