--- a/Traditional.html
+++ b/Traditional.html
@@ -77,7 +77,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <li><a href="#Life">Life Drawing</a></li>
   <li><a href="#publication">Publication Design</a></li>
   <li><a href="#posters">Poster Design</a></li>
-  <li><a href="#branding">Branding</a></li>
+  <li><a href="#character">Character Work</a></li>
 </ul>
 </div>
 
@@ -123,9 +123,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		
 
 	<br>
-<section id="branding" class="full">
+<section id="character" class="full">
 	<header style="background:transparent;"> 
-		<span>Branding</span>
+		<span>Character Work</span>
 	</header>
   
   <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
