--- a/Traditional.html
+++ b/Traditional.html
@@ -62,7 +62,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
  
 
   <ul>
-  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+  <li id="top"><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
   <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
@@ -202,7 +202,12 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <div class="caption-container">
 <p id="caption"></p>
 </div>
-</section>
+<div class=subnavcontainer>
+  <ul style="float:Left;">
+  <li><a href="#top">Jump to Top</a></li>
+</ul>
+</div>
+
 
 </div>
 </div>
