--- a/Traditional.html
+++ b/Traditional.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="viewport" content="width=800px, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥDesignꕥ</title>
+	<title>ꕥTraditional Artꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="imggallery.css" rel="stylesheet" type="text/css" media="all">
