--- a/Traditional.html
+++ b/Traditional.html
@@ -95,7 +95,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Publication Design</span>
 	</header>
 	
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
+  
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 
 </section>
@@ -111,9 +112,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Poster Design</span>
 	</header>
   
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
 
-
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+	
 </section>
 </div>
 
@@ -129,8 +130,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Character Work</span>
 	</header>
   
- 
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+	
 <p></p>
 	
 
@@ -150,20 +151,20 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Life Drawing</span>
 	</header>
   
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/10%20sec%20ken.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/5%20ish%20mins%20nina.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/CharcoalPortrait.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/Kaelyn%20Lounging.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/KaelynPort.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/Kaylins%20back.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover; ;">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/davinki.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/delon%20lounging.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/kaelyn%2015%20min.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/ken%20lounging.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/lulu%201%20and%205%20min.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/me%20port%20lol.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/nina%20staff.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/partil%20blind.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="display: block; margin: auto; object-fit:cover;">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/10%20sec%20ken.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/5%20ish%20mins%20nina.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/CharcoalPortrait.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/Kaelyn%20Lounging.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/KaelynPort.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/Kaylins%20back.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/davinki.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/delon%20lounging.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/kaelyn%2015%20min.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/ken%20lounging.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/lifedrawing/lulu%201%20and%205%20min.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/me%20port%20lol.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/nina%20staff.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/partil%20blind.png?raw=true" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 <p></p>
 	
