--- a/Traditional.html
+++ b/Traditional.html
@@ -89,13 +89,29 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 
 	
-<section id="publication" class="full">
+<section id="character" class="full">
 	
 	<header style="background:transparent;"> 
-		<span>Publication Design</span>
+		<span>Character Work</span>
 	</header>
 	
   
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/BIG%20gambler%20no%20gif.png" onclick="openModal();currentSlide(1)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Bnuuy-recipes-glitter.gif" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Dot%20and%20Blaire%20dollies%20(dicesinferno%20style)1.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/IMG_5105.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Reika5mb.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Screenshot%202025-06-23%20143140.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy%20haiiiiiiiii.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy-follow-me.gif" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuytransparent.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/dot%20pastels.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/nud%20esktech%20page.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
   <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 
@@ -141,11 +157,12 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	<p></p>
 
-	<div class="container">
-	
-		
 
-	<br>
+
+
+	
+	<div class="container">
+		<br>
 <section id="Life" class="full">
 	<header style="background:transparent;"> 
 		<span>Life Drawing</span>
