--- a/Traditional.html
+++ b/Traditional.html
@@ -108,11 +108,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/dot%20pastels.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
   <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/nud%20esktech%20page.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
   <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 
 </section>
@@ -123,20 +118,23 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <div class="container">
 	
 	<br>
-<section id="posters" class="full">
+<section id="illusoth" class="full">
 	<header style="background:transparent;"> 
-		<span>Poster Design</span>
+		<span>Other Illustrations</span>
 	</header>
   
 
-  <img src="" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/Hina.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/abstracetd.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/hgest.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 </section>
 </div>
 
 	<p></p>
 	  
-<div class="container">
+<!--
+	<div class="container">
 	
 		
 
@@ -156,7 +154,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		</div>
 	
 	<p></p>
-
+-->
 
 
 
@@ -199,9 +197,10 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 <div class="modal-content">
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"> <h2>---</h2>
+                            <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/partil%20blind.png?raw=true" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>wip</h2>
 	 <p>
+		 sorry
 		<p>
 		</p>
                         </div>
