--- a/Traditional.html
+++ b/Traditional.html
@@ -75,8 +75,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <div class=subnavcontainer>
   <ul style="float:none;">
   <li><a href="#Life">Life Drawing</a></li>
-  <li><a href="#publication">Publication Design</a></li>
-  <li><a href="#posters">Poster Design</a></li>
+  <li><a href="#illusoth">Other Illustrations</a></li>
   <li><a href="#character">Character Work</a></li>
 </ul>
 </div>
