--- a/Traditional.html
+++ b/Traditional.html
@@ -96,16 +96,16 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
   
   <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/BIG%20gambler%20no%20gif.png" onclick="openModal();currentSlide(1)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Bnuuy-recipes-glitter.gif" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Dot%20and%20Blaire%20dollies%20(dicesinferno%20style)1.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/IMG_5105.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Reika5mb.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Screenshot%202025-06-23%20143140.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy%20haiiiiiiiii.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy-follow-me.gif" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuytransparent.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/dot%20pastels.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/nud%20esktech%20page.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Bnuuy-recipes-glitter.gif" onclick="openModal();currentSlide(2)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Dot%20and%20Blaire%20dollies%20(dicesinferno%20style)1.png" onclick="openModal();currentSlide(3)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/IMG_5105.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Reika5mb.png" onclick="openModal();currentSlide(5)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Screenshot%202025-06-23%20143140.png" onclick="openModal();currentSlide(6)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy%20haiiiiiiiii.png" onclick="openModal();currentSlide(7)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy-follow-me.gif" onclick="openModal();currentSlide(8)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuytransparent.png" onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/dot%20pastels.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/nud%20esktech%20page.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 
 </section>
@@ -122,9 +122,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	</header>
   
 
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/Hina.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/abstracetd.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
-  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/hgest.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/Hina.png" onclick="openModal();currentSlide(12)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/abstracetd.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
+  <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/Other-Illustration/hgest.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow" height="300px" style="margin: auto; object-fit:cover; ">
 	
 </section>
 </div>
@@ -195,14 +195,46 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 <div class="modal-content">
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/lifedrawing/partil%20blind.png?raw=true" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/BIG%20gambler%20no%20gif.png" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
                             <p style="position: relative; bottom: 80px ;"> <h2>wip</h2>
 	 <p>
-		 sorry
+		 This piece was made as a part of <a href="https://artfight.net/">ArtFight!</a>
+		<p>
+			you get a preview of how this page will work tho! :O
+		</p>
+                        </div>
+                    </div>
+					                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Bnuuy-recipes-glitter.gif" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Recipies Button</h2>
+	 <p>
+		 This graphic was made for a private website, to work as a button to the recipes page.
 		<p>
 		</p>
                         </div>
                     </div>
+					                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/Dot%20and%20Blaire%20dollies%20(dicesinferno%20style)1.png" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>B & D Style Exercise</h2>
+	 <p>
+		 A study of two characters in another art style.
+		<p>
+		</p>
+                        </div>
+                    </div>
+					                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/IMG_5105.jpg" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>B Portrait</h2>
+	 <p>
+		 Small doodle of a character.
+		<p>
+		</p>
+                        </div>
+                    </div>
+					
                    
 					<!--
                     <div class="mySlides">
