--- a/Traditional.html
+++ b/Traditional.html
@@ -73,8 +73,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	
 	<header style="background:transparent;"> 
-		<span>Please click on each image for more info!</span>
-		a
+		<span>Traditional Art & Illustrations</span>
+		<br>
+		<h3>Here you will find much of my casual work, I'm a doodler at heart and drawing was my first love, in a way.</h3>
 	</header>
 <div class=subnavcontainer>
   <ul style="float:none;">
