--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 	<div class="container">
 		<section class="half">
        <p>
-      <h2 style="font-size:30px;">Welcome to my hand-made website!</h2>
+      <h2 style="font-size:30px;">Welcome to my hand-made portfolio!</h2>
 		
-			<h3 style="font-size:20px;"> Here you will find various pieces from and for my art portfolio, the site itself acts as a piece from my portfolio as well. 
+			<h3 style="font-size:20px;"> Here you will find various pieces demonstrating my art & design capabilities, the site itself acts as a piece from my portfolio as well. 
 				<br>
 				<br>
 				I believe in a template-free approach to making websites, and have spent much of my free time teaching myself both HTML and CSS.
