--- a/Traditional.html
+++ b/Traditional.html
@@ -2,7 +2,7 @@
 
 
 <head>
-	<meta name="viewport" content="width=800px, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<title>ꕥTraditional Artꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
@@ -260,7 +260,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <img src="https://raw.githubusercontent.com/ErikaOrn/Portfolio/refs/heads/main/images/CharacterWork/bnuuy%20haiiiiiiiii.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"> <h2>"Bnuuy Greeting"</h2>
 							</p>
-							This was made for a private web design project, the character seen is the mascor for the web page.
+							This was made for a private web design project, the character seen is the mascot for the web page.
                         </div>
                     </div>
 					
