--- a/WebDesign.html
+++ b/WebDesign.html
@@ -2,7 +2,7 @@
 
 
 <head>
-	<meta name="viewport" content="width=800px, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<title>ꕥWeb Designꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
