--- a/About.html
+++ b/About.html
@@ -38,6 +38,7 @@
   <div>
     <img src="https://files.catbox.moe/s8222k.png" style="justify-content:center;width:80%">
   </div>
+</div>
   
   
   
@@ -48,7 +49,7 @@
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. 
 				</p>
 		<p style="font-family: 'Lexend';text-align: left;"> 
-I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.
+I aim make designs that not only look good, but <i>feel</i> good. I aim to serve clients with designs that can elevate their product and/or business to a higher level of aesthetic appeal, while remaining true to my ethos as a designer.
 		</p>
 
   </div>
