--- a/About.html
+++ b/About.html
@@ -51,6 +51,8 @@
 		<p style="font-family: 'Lexend';text-align: left;"> 
 I aim make designs that not only look good, but <i>feel</i> good. I aim to serve clients with designs that can elevate their product and/or business to a higher level of aesthetic appeal, while remaining true to my ethos as a designer.
 		</p>
+	 <!--I aim to design dolls that are both able to be cherished for life and provide meaningful play value. I have said since I was in high school that if I can make a single doll that a single person cherishes for life, then all of my life's work will have been worth it.
+	 -->
 
   </div>
 
