--- a/About.html
+++ b/About.html
@@ -38,14 +38,13 @@
   <div>
     <img src="https://files.catbox.moe/s8222k.png" style="justify-content:center;width:80%">
   </div>
-</div>
   
   
   
- <div class="container" style="display:flex; width:50%;">
+ <div class="container" style="display:flex; width:60%;">
     
 <abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
-				<p style="font-family: 'Lexend';text-align: left; "> 
+				<p style="font-family: 'Lexend'; "> 
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. 
 				</p>
 		<p style="font-family: 'Lexend';text-align: left;"> 
