--- a/About.html
+++ b/About.html
@@ -42,7 +42,7 @@
   
   
  <div class="container" style="display:flex; width:55%; max-height: auto;">
-<abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, doll design, and general graphic design. </abt>
+<abt>I'm a multidisciplinary artist who specializes in traditional and digital illustration, graphic design, and even toy design. </abt>
 				<p style="font-family: 'Lexend'; font-size:25"> 
 				Additionally, I have been trained in publication design, UI/UX design, typography, painting, and traditional sculpture. My liberal arts education at Lewis University has helped further diversify my skillsets outside of the design realm. 
 			<p style="font-family: 'Lexend'; font-size:25"> 
