--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
  <div class=sidebyside>
     <a class="tooltipster"
-  title="Graphic Design" href="/Design">
+  title="Design" href="/Design">
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
