--- a/Design.html
+++ b/Design.html
@@ -368,6 +368,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 </div>
 </div>
+	<div class=subnavcontainer>
+  <ul style="float:Left;">
+  <li><a href="#top">Jump to Top</a></li>
+</ul>
+</div>
 	<footer>
 	<i>© Erika Ornelas, 2025</i>
 	</footer>
