--- a/Traditional.html
+++ b/Traditional.html
@@ -57,12 +57,12 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </script>
   
 <center=left>
-<body>
+<body id="top">
 
  
 
   <ul>
-  <li id="top"><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
+  <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
   <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
