--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
   <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
-  <a href="/About"><li>About</li></a>
+  <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
 </ul>
 	
