--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Design" href="/Design">
-  <img src="https://files.catbox.moe/ue8wu0.png" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
+  <img src="https://files.catbox.moe/ue8wu0.png" width="25%" style="object-fit:cover; width: 25%; height: 25%; float:left;"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
   <img src="https://files.catbox.moe/gvcsfc.png" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
