--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Design" href="/Design">
-  <img src="https://files.catbox.moe/ue8wu0.png" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
-  <img src="https://files.catbox.moe/gvcsfc.png" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Traditional Art" href="/Traditional">
-  <img src="https://files.catbox.moe/la65t0.jpeg" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true" width="25%" style="object-fit:cover; width: 25%; height: 300px; float:left;"></a>
      
   
 
