--- a/index.html
+++ b/index.html
@@ -57,16 +57,20 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Design" href="/Design">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;
+  justify-content: center;"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;
+  justify-content: center;"></a>
     <a class="tooltipster"
   title="Traditional Art" href="/Traditional">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;
+  justify-content: center;"></a>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;"></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true" width="24.9%" style="margin:auto; object-fit:cover; width: 25%; height: auto; display: inline-block; align-items: center;
+  justify-content: center;"></a>
      
   
 
