--- a/Traditional.html
+++ b/Traditional.html
@@ -77,7 +77,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<br>
 		<h3>Here you will find much of my casual work, I'm a doodler at heart and drawing was my first love, in a way.</h3>
 	</header>
-<div class=subnavcontainer>
+<div class=subnavgallerycontainer>
   <ul style="float:none;">
   <li><a href="#Life">Life Drawing</a></li>
   <li><a href="#illusoth">Other Illustrations</a></li>
@@ -86,7 +86,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 
 	  
-<div class="container">
+<div class="gallerycontainer">
 	
 
 	
@@ -115,7 +115,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	<p></p>
 	  
-<div class="container">
+<div class="gallerycontainer">
 	
 	<br>
 <section id="illusoth" class="full">
@@ -134,7 +134,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	<p></p>
 	  
 <!--
-	<div class="container">
+	<div class="gallerycontainer">
 	
 		
 
@@ -159,7 +159,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 
 	
-	<div class="container">
+	<div class="gallerycontainer">
 		<br>
 <section id="Life" class="full">
 	<header style="background:transparent;"> 
@@ -452,7 +452,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
 
-<div class="caption-container">
+<div class="caption-gallerycontainer">
 <p id="caption"></p>
 </div>
 
@@ -461,7 +461,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 </div>
 	
-<div class=subnavcontainer>
+<div class=subnavgallerycontainer>
   <ul style="float:Left;">
   <li><a href="#top">Jump to Top</a></li>
 </ul>
