--- a/WebDesign.html
+++ b/WebDesign.html
@@ -32,7 +32,7 @@
 	
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
-	<!---<div class=subnavcontainer>
+	<!---<div class=subnavgallerycontainer>
   <ul style="float:none;">
   <li><a href="#custom-AG">-</a></li>
   <li><a href="#Custom-12">-</a></li>
@@ -42,7 +42,7 @@
 -->
 
 	  
-<div class="container" style="background:transparent; outline:0px; border:0px; width:450px; height:800px; float:left;">
+<div class="gallerycontainer" style="background:transparent; outline:0px; border:0px; width:450px; height:800px; float:left;">
 	
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="850" src="https://embed.figma.com/proto/FDzZrsNao8lvtrjxwX2yuK/Horder-App?node-id=37-490&starting-point-node-id=37%3A374&embed-host=share" allowfullscreen></iframe>
  </div>
@@ -50,7 +50,7 @@
 </section>
 	<p></p>
 	
-<div class="container" style="float:right; width:50%;">
+<div class="gallerycontainer" style="float:right; width:50%;">
 
 
 
