--- a/Dolls.html
+++ b/Dolls.html
@@ -73,7 +73,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	<header style="background:transparent;"> 
 		<span>Please click on each image for more info!</span>
 	</header>
-<div class=subnavcontainer>
+<div class=subnavgallerycontainer>
   <ul style="float:none;">
   <li><a href="#custom-AG">Customized 18" Dolls</a></li>
   <li><a href="#Custom-12">Customized 12" Dolls</a></li>
@@ -82,7 +82,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 
 	  
-<div class="container">
+<div class="gallerycontainer">
 	
 <div class="sidebyside">
 	
@@ -100,7 +100,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </section>
 	<p></p>
 	
-<div class="container">
+<div class="gallerycontainer">
 
 <div class="sidebyside">
 	
@@ -125,7 +125,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 </section>
 	<p></p>
-	<div class="container">
+	<div class="gallerycontainer">
 
 <div class="sidebyside">
 	
@@ -287,7 +287,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
 
-<div class="caption-container">
+<div class="caption-gallerycontainer">
 <p id="caption"></p>
 </div>
 </section>
