--- a/Traditional.html
+++ b/Traditional.html
@@ -73,7 +73,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<br>
 		<h3>Here you will find much of my casual work, I'm a doodler at heart and drawing was my first love, in a way.</h3>
 	</header>
-<div class=subnavgallerycontainer>
+<div class=subnavcontainer>
   <ul style="float:none;">
   <li><a href="#Life">Life Drawing</a></li>
   <li><a href="#illusoth">Other Illustrations</a></li>
@@ -82,7 +82,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 
 	  
-<div class="gallerycontainer">
+<div class="container">
 	
 
 	
@@ -111,7 +111,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	<p></p>
 	  
-<div class="gallerycontainer">
+<div class="container">
 	
 	<br>
 <section id="illusoth" class="full">
@@ -130,7 +130,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	<p></p>
 	  
 <!--
-	<div class="gallerycontainer">
+	<div class="container">
 	
 		
 
@@ -155,7 +155,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 
 	
-	<div class="gallerycontainer">
+	<div class="container">
 		<br>
 <section id="Life" class="full">
 	<header style="background:transparent;"> 
@@ -448,7 +448,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
 
-<div class="caption-gallerycontainer">
+<div class="caption-container">
 <p id="caption"></p>
 </div>
 
@@ -457,7 +457,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 </div>
 	
-<div class=subnavgallerycontainer>
+<div class=subnavcontainer>
   <ul style="float:Left;">
   <li><a href="#top">Jump to Top</a></li>
 </ul>
