--- a/404.html
+++ b/404.html
@@ -7,9 +7,7 @@
 	<meta charset="utf-8">
 	<title>ꕥErika Ornelasꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
-	<link href="style.css" rel="stylesheet" type="text/css" media="all">
-      <meta property="og:image" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png" />
-  <meta property="twitter:card" content="https://er1k4.neocities.org/assets/thumbnails/site%20thumb1home.png">
+	<link href="imggallery.css" rel="stylesheet" type="text/css" media="all">
 	
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,14 +33,9 @@
 	<div class="container">
 		<section class="half">
        <p>
-      <h2>oops!!
-	      <P></P>
-      
-      <img src="https://er1k4.neocities.org/assets/pikadrill.gif" style="width:30%">
-
-<p></p>
+      <h1>Page Not Found </h1>
 	      
-	       <a href="javascript:history.back()" style=color:#ffc7e7;>go back</a>
+	      <h2>  <a href="javascript:history.back()" style=color:#ffc7e7;>go back</a>
       </h2>
 		</section>
 		</div>
