--- a/WebDesign.html
+++ b/WebDesign.html
@@ -51,11 +51,11 @@
 
   
   <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/appdesign/Horder_Poster.png?raw=true"  style="object-fit:cover; height:780px; background:transparent; outline:0px; border:0px; ">
-<h3>The Horder app was made as a mockup for a buy-and-sell platform that would prevent scalpers and scammers from taking advantage of collectors like myself.
+<h3 style="font-weight:normal">The Horder app was made as a mockup for a buy-and-sell platform that would prevent scalpers and scammers from taking advantage of collectors like myself.
 	<br>
 	in recent years more and more people have been taking up colelcting as a hobby, but as a result more and more bad actors have come on the scene to take advantage of collectors both new and seasoned.
 	<br>
-	Horder is my dream platform which is meant to bring power back to the buyer and away from scalpers and scammers, bringing order to your hoarding.\
+	Horder is my dream platform which is meant to bring power back to the buyer and away from scalpers and scammers, bringing order to your hoarding.
 	</h3>
 </div>
 	
