--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Design" href="/Design">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true" ></a>
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true" style="width:100%"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
   <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true"></a>
