--- a/Traditional.html
+++ b/Traditional.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<title>ꕥTraditional Artꕥ</title>
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="imggallery.css" rel="stylesheet" type="text/css" media="all">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
