--- a/Dolls.html
+++ b/Dolls.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="imggallery.css" rel="stylesheet" type="text/css" media="all">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
   
