--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!--hey you! what're looking for? :3 thanks for checking out the code!-->
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<title>ꕥErika Ornelasꕥ</title>
 
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
-	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+	<link href="/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
   
   
-<center=left>
 <body>
-
    <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
   <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
@@ -27,37 +26,34 @@
 	
   <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
-	<div class="container">
-      <h2 style="font-size:30px;">Welcome to my hand-made portfolio!</h2>
+	<div class="container-fluid">
+      <h2>Welcome to my hand-made portfolio!</h2>
     <br>
-			<h3 style="font-size:20px;"> Here you will find various pieces demonstrating my art & design capabilities, the site itself acts as a piece from my portfolio as well. 
-				<br>
-				<br>
+			<h3 style="text-align:center;"> Here you will find various pieces demonstrating my art and design capabilities, the site itself acts as a piece from my portfolio as well. 
+				<p></p>
 				I believe in a template-free approach to making websites, and have spent much of my free time teaching myself both HTML and CSS.
-			</p>I'm still in the process of building this site, but if you wanna browse, go ahead and click on a photo below to get started!<p>
+				<br>
+				I'm still in the process of building this site, but feel free to browse by clicking on a photo below!
 			</h3>
 
-
-		   <br>
- <div class=sidebyside>
-    <a class="tooltipster"
-  title="Design" href="/Design">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true"></a>
-    <a class="tooltipster"
-  title="UI/UX design" href="/WebDesign">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true"></a>
-    <a class="tooltipster"
-  title="Traditional Art" href="/Traditional">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true" ></a>
-    <a class="tooltipster"
-  title="Dolls" href="/Dolls">
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true"  ></a>
-      </div>
-  
-
-  
-
-	</div>
+	<div class="row" >
+  <div class="col-sm-3">
+    <a title="Design" href="/Design">
+  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/deisgn%20tumbnail.jpg?raw=true"></a>
+    </div>
+  <div class="col-sm-3">
+    <a title="UI/UX design" href="/WebDesign">
+  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/ui%20ux%20thumbnail.png?raw=true"></a>
+  </div>
+  <div class="col-sm-3">
+    <a title="Traditional Art" href="/Traditional">
+  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/trad%20art%20thumbnail.png?raw=true" ></a>
+  </div>
+  <div class="col-sm-3">
+    <a title="Dolls" href="/Dolls">
+  <img class="rounded" src="https://github.com/ErikaOrn/Portfolio/blob/main/images/homeimages/doll%20thumbnail.jpg?raw=true"></a>
+  </div>
+</div>
 	
   </div>
 	<footer>
