--- a/WebDesign.html
+++ b/WebDesign.html
@@ -1,64 +1,52 @@
+<!--hey you! what're looking for? :3 thanks for checking out the code!-->
 <html>
 
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<title>ꕥWeb Designꕥ</title>
+	<title>ꕥErika Ornelasꕥ</title>
+
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
-	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
   
   
-<center=left>
 <body>
-
- 
-
-  <ul>
+   <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
   <li><a href="mailto:erikaornelas1201@gmail.com">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
 </ul>
 	
-	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
+  <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
-	<!---<div class=subnavgallerycontainer>
-  <ul style="float:none;">
-  <li><a href="#custom-AG">-</a></li>
-  <li><a href="#Custom-12">-</a></li>
-  <li><a href="#Vanya">-</a></li>
-</ul>
-</div> 
--->
 
+<div class="row" style="background: var(--content);">
 	  
-<div class="gallerycontainer" style="background:transparent; outline:0px; border:0px; width:450px; height:800px; float:left;">
+<div class="col-sm-4" style="background:transparent; float:left;">
 	
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="850" src="https://embed.figma.com/proto/FDzZrsNao8lvtrjxwX2yuK/Horder-App?node-id=37-490&starting-point-node-id=37%3A374&embed-host=share" allowfullscreen></iframe>
  </div>
+<div class="col-sm-4">
+
+
+  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/appdesign/Horder_Poster.png?raw=true"  style="object-fit:contain; height:100%; width:auto;">
 </div>
-</section>
-	<p></p>
-	
-<div class="gallerycontainer" style="float:right; width:70%;">
-
-
-
-  
-  <img src="https://github.com/ErikaOrn/Portfolio/blob/main/images/appdesign/Horder_Poster.png?raw=true"  style="object-fit:cover; height:780px; background:transparent; outline:0px; border:0px; ">
-<h3 style="font-weight:normal">The Horder app was made as a mockup for a buy-and-sell platform that would prevent scalpers and scammers from taking advantage of collectors like myself.
+<div class="col-sm-4" style="display:flex;">
+<h3 style="font-weight:normal;display:flex;align-items:center; ">The Horder app was made as a mockup for a buy-and-sell platform that would prevent scalpers and scammers from taking advantage of collectors like myself.
 	<br>
-	in recent years more and more people have been taking up colelcting as a hobby, but as a result more and more bad actors have come on the scene to take advantage of collectors both new and seasoned.
+	in recent years more and more people have been taking up collecting as a hobby, but as a result more and more bad actors have come on the scene to take advantage of collectors both new and seasoned.
 	<br>
-	Horder is my dream platform which is meant to bring power back to the buyer and away from scalpers and scammers, bringing order to your hoarding.
+	Horder is my dream platform which is meant to bring power back to the buyer and away from scalpers and scammers, bringing order to your hoarding. (hence, (h)order)
 	</h3>
-</div>
+	</div>
+	</div>
 	
 
 
