--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>ꕥErika Ornelasꕥ</title>
 
   <link rel="icon" href="https://er1k4.neocities.org/favicon.ico">
-	<link href="/style.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/portfolio%20experiemnting%20(i%20hate%20github)/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
