--- a/Dolls.html
+++ b/Dolls.html
@@ -11,10 +11,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
-  
-  
-			    
-	<script>
+ 
+<script>
 function openModal() {
     document.getElementById("myModal").style.display = "block";
 }
@@ -52,7 +50,6 @@ dots[slideIndex-1].className += " active";
 captionText.innerHTML = dots[slideIndex-1].alt;
 }
 </script>
-<center=left>
 <body>
 
  
@@ -67,10 +64,10 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
 	<header style="background:transparent;"> 
-		<span>Please click on each image for more info!</span>
+		<span style="color:var(--berry)">Please click on each image for more info!</span>
 	</header>
-<div class=subnavcontainer>
-  <ul style="float:none;">
+<div style="display:flex;">
+  <ul style="display:flex;align-items:center; ">
   <li><a href="#custom-AG">Customized 18" Dolls</a></li>
   <li><a href="#Custom-12">Customized 12" Dolls</a></li>
   <li><a href="#Vanya">Hand-made Dolls</a></li>
@@ -82,14 +79,14 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 <div class="sidebyside">
 	
-<section id="Vanya" class="full">
+<section id="Vanya" class="container-fluid">
 
   
-  <img src="https://files.catbox.moe/mkym3w.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/mkym3w.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/w2bryr.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/w2bryr.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/pa4bus.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/pa4bus.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
 
  </div>
 </div>
@@ -100,22 +97,22 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 <div class="sidebyside">
 	
-<section id="Custom-12" class="full">
+<section id="Custom-12" class="container-fluid">
 
   
-  <img src="https://files.catbox.moe/izklia.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/izklia.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/csbxw9.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/csbxw9.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/o5vy3q.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/o5vy3q.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/uc7fyo.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/uc7fyo.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/7z3g80.jpeg" onclick="openModal();currentSlide(8)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/7z3g80.jpeg" onclick="openModal();currentSlide(8)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/a6vyah.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/a6vyah.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/zsvaet.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/zsvaet.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
 
  </div>
 </div>
@@ -125,9 +122,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 <div class="sidebyside">
 	
-<section id="custom-AG" class="full">
+<section id="custom-AG" class="container-fluid">
 	
-  <img src="https://files.catbox.moe/7y8kj2.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/7y8kj2.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow" width="24%" style="object-fit:cover; float:left;">
 
  </div>
 </div>
